# metricz-cpp

./: .clang-format  .gitattributes  .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: ci.yml
cmake/: metricz-config.cmake.in
examples/: base_example.cpp  exporters_example.cpp
include/: metrics.hpp  metrics_exporter.hpp
src/: metrics.cpp
